<resources>
    <string name="app_name">Firebase Login</string>
    <string name="todo">TODO</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="new_user">New User?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign out</string>
    <string name="hello">Hello,</string>
    <string name="sign_up">Sign Up</string>
    <string name="reset_password">Reset Password</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_sure">Are you sure?</string>
    <string name="settings">Setting</string>
    <string name="mainLaayout">Home</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="save">Save</string>
    <string name="update_your_email">Update your Email</string>
    <string name="chat">Chat</string>
    <string name="change_profile">CHANGE PROFILE</string>
    <string name="username">Username</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="choose_an_image">Choose an image</string>
    <string name="upload">Upload</string>
    <string name="search">Search</string>
    <string name="desc">Desc</string>
    <string name="doc_name">Doc Name</string>
    <string name="dd_mm_yyyy_hh_mm_ss_a">dd-MM-yyyy HH:mm:ss a</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="city">City</string>
    <string name="send_message">Send Message</string>
    <string name="type_a_message">Type a Message</string>
    <string name="message">message</string>
    <string name="received_message">Received Message</string>
    <string name="my_offers">My Offers</string>
    <string name="my_favorite">My favorite</string>
    <string name="title">Title</string>
    <string name="no_internet_connection">No Internet Connection  </string>
    <string name="time">Time</string>
    <string name="textview">TextView</string>
    <string name="provider">Provider</string>
    <string name="user_email">User Email</string>
    <string name="view_number">View Number</string>
    <string name="off">OFF</string>

</resources>